# Roger

./: .gitignore  CLAUDE.md  README.md  ROGER_SPEC.md  pyproject.toml
local/: Modelfile
roger/: __init__.py  cli.py  config.py  docs.py  exceptions.py  generator.py  grader.py  graph.py  models.py  quiz.py  storage.py  templates.py  webquiz.py
roger/hooks/: pre_commit.py
roger/llm/: local.py  router.py
templates/: quiz.html.jinja  report.html.jinja
tests/: conftest.py  test_generator.py  test_graph.py  test_quiz.py  test_storage.py  test_templates.py
