[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roger-cli"
version = "0.1.4"
description = "Codebase understanding quiz tool for AI-assisted development"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "networkx>=3.0",
    "requests>=2.31.0",
    "gitpython>=3.1.0",
    "jinja2>=3.1.0",
    "graphifyy>=0.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
roger = "roger.cli:app"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.hatch.build.targets.wheel]
packages = ["roger"]
